--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,11 @@
     ],
     "require": {
         "getkirby/composer-installer": "^1.1",
-        "getkirby/cms": "^3"
+        "getkirby/cms": "^3",
+        "kirbyzone/formbuilder": "^1.1",
+        "timoetting/kirby-builder": "^2.0",
+        "jg/kirby-fields-block": "^1.0",
+        "mzur/kirby-uniform": "^4.0",
+        "oblik/kirby-json": "^1.0"
     }
 }
