--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "recognizeSelfClosing": true
   },
   "devDependencies": {
+    "@prettier/plugin-php": "^0.16.3",
     "@vue/component-compiler-utils": "^3.2.0",
     "concurrently": "^6.2.0",
+    "prettier": "^1.19.1",
     "vue-template-compiler": "^2.6.12"
   },
   "dependencies": {
