--- a/blueprints/fields/form-fields.yml
+++ b/blueprints/fields/form-fields.yml
@@ -1,12 +1,14 @@
 label: Fields
 type: layout
 layouts:
-  - "1/1"
-  - "1/2, 1/2"
-  - "1/3, 2/3"
-  - "2/3, 1/3"
+  - '1/1'
+  - '1/2, 1/2'
+  - '1/3, 2/3'
+  - '2/3, 1/3'
 fieldsets:
   - form-field-text
+  - form-field-textarea
+  - form-field-number
   - form-field-email
   - form-field-date
   - form-field-checkboxes
