--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "dev": "concurrently \"npm:server\" \"npm:watch\"",
+    "dev": "concurrently \"npm:server\" \"npm:watch\" \"npm:mail-hog\"",
+    "mail-hog": "~/go/bin/MailHog",
     "server": "php -S localhost:8888 -t public server.php",
     "watch": "parcel watch src/index.js --no-source-maps -d ./",
     "build": "parcel build src/index.js --no-source-maps --experimental-scope-hoisting -d ./"
@@ -13,9 +14,11 @@
     "@vue/component-compiler-utils": "^3.2.0",
     "concurrently": "^6.2.0",
     "prettier": "^1.19.1",
+    "sass": "^1.34.0",
     "vue-template-compiler": "^2.6.12"
   },
   "dependencies": {
+    "tbl-for-kirby": "^1.2.0",
     "vue": "^2.6.12",
     "vue-hot-reload-api": "^2.3.4"
   }
