--- a/site/blueprints/pages/form.yml
+++ b/site/blueprints/pages/form.yml
@@ -6,5 +6,32 @@ columns:
       form_fields: fields/form-fields
   - width: 5/12
     fields:
-      form_success_page: fields/form-success-page
-      form_entries: fields/form-entries
+      form_success_type:
+        type: toggle
+        label: Success
+        width: 5/12
+        text:
+          - 'Message'
+          - 'Page'
+      form_success_message:
+        type: writer
+        label: Message
+        default: Thank you for the registration!
+        width: 7/12
+        when:
+          form_success_type: false
+      form_success_page:
+        label: Page
+        type: pages
+        multiple: false
+        width: 2/3
+        when:
+          form_success_type: true
+      form_fields_error_message:
+        type: writer
+        label: Fields Error
+        default: Please fill in all fields correctly.
+  - width: 1/1
+    fields:
+      form_entries:
+        type: form-entries
