--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@prettier/plugin-php": "^0.16.3",
     "@vue/component-compiler-utils": "^3.2.0",
     "concurrently": "^6.2.0",
+    "cssnano": "^5.0.5",
+    "postcss": "^8.3.0",
     "prettier": "^1.19.1",
     "sass": "^1.34.0",
     "vue-template-compiler": "^2.6.12"
