Translate default field

--- a/blueprints/blocks/form-field-date.yml
+++ b/blueprints/blocks/form-field-date.yml
@@ -8,6 +8,7 @@ fields:
     type: hidden
     default: '["date"]'
   default:
+    extends: fields/form-field-default
     type: date
     time: false
     width: 1/2
