--- a/blueprints/blocks/form-field-tel.yml
+++ b/blueprints/blocks/form-field-tel.yml
@@ -5,6 +5,7 @@ icon: ☎️
 fields:
   extends: fields/form-field-basic
   default:
+    extends: fields/form-field-default
     type: text
     width: 1/3
   placeholder:
