--- a/blueprints/blocks/form-field-email.yml
+++ b/blueprints/blocks/form-field-email.yml
@@ -6,6 +6,7 @@ fields:
     type: hidden
     default: '["email"]'
   default:
+    extends: fields/form-field-default
     type: email
     width: 1/3
   placeholder:
