--- a/blueprints/blocks/form-field-radio.yml
+++ b/blueprints/blocks/form-field-radio.yml
@@ -5,6 +5,7 @@ icon: 🔘
 fields:
   extends: fields/form-field-basic
   default:
+    extends: fields/form-field-default
     type: text
     placeholder: 'value'
   options:
