--- a/blueprints/blocks/form-field-text.yml
+++ b/blueprints/blocks/form-field-text.yml
@@ -9,6 +9,7 @@ fields:
     extends: fields/form-field-max
     width: 1/6
   default:
+    extends: fields/form-field-default
     type: text
     width: 4/6
   placeholder:
