--- a/blueprints/blocks/form-field-url.yml
+++ b/blueprints/blocks/form-field-url.yml
@@ -6,6 +6,7 @@ fields:
     type: hidden
     default: '["url"]'
   default:
+    extends: fields/form-field-default
     type: text
     width: 1/3
   placeholder:
