--- a/blueprints/sections/form-entries.yml
+++ b/blueprints/sections/form-entries.yml
@@ -1,3 +1,8 @@
 type: fields
 fields:
-  form_entries: fields/form-entries
+  form_entries:
+    type: form-entries
+    label: Test
+    label:
+      en: Entries
+      de: Einträge
