--- a/plugin/blueprints/blocks/form-field-number.yml
+++ b/plugin/blueprints/blocks/form-field-number.yml
@@ -6,14 +6,12 @@ fields:
   extends: fields/form-field-basic
   validators:
     type: hidden
-    default: '["number"]'
+    default: '["num"]'
   min:
     extends: fields/form-field-min
-    label: Min Value
     width: 2/12
   max:
     extends: fields/form-field-max
-    label: Max Value
     width: 2/12
   step:
     type: text
