chore: switch to `kirbyup`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "editor.tabSize": 2,
   "editor.detectIndentation": false,
-  "editor.formatOnSave": true,
+  // "editor.formatOnSave": true,
   "[php]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
