--- a/package.json
+++ b/package.json
@@ -3,25 +3,13 @@
     "dev": "concurrently \"npm:server\" \"npm:watch\" \"npm:mail-hog\"",
     "mail-hog": "~/go/bin/MailHog",
     "server": "php -S localhost:8888 -t public server.php",
-    "watch": "parcel watch src/index.js --no-source-maps -d ./",
+    "watch": "kirbyup serve src/index.js",
     "build": "parcel build src/index.js --no-source-maps --experimental-scope-hoisting -d ./"
   },
-  "posthtml": {
-    "recognizeSelfClosing": true
-  },
   "devDependencies": {
-    "@prettier/plugin-php": "^0.16.3",
-    "@vue/component-compiler-utils": "^3.2.0",
+    "@prettier/plugin-php": "^0.19.1",
     "concurrently": "^6.2.0",
-    "cssnano": "^5.0.5",
-    "postcss": "^8.3.0",
-    "prettier": "^1.19.1",
-    "sass": "^1.34.0",
-    "vue-template-compiler": "^2.6.12"
-  },
-  "dependencies": {
-    "tbl-for-kirby": "^1.2.0",
-    "vue": "^2.6.12",
-    "vue-hot-reload-api": "^2.3.4"
+    "kirbyup": "^2.0.1",
+    "prettier": "^2.7.1"
   }
 }
