--- a/plugin/blueprints/sections/form-entries.yml
+++ b/plugin/blueprints/sections/form-entries.yml
@@ -1,8 +1,2 @@
-type: fields
-fields:
-  form_entries:
-    type: form-entries
-    label: Test
-    label:
-      en: Entries
-      de: Einträge
+type: pages
+layout: table
