--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,15 @@
+# OS files
 .DS_Store
-node_modules/
+
+# npm modules
+/node_modules
+
+# Composer files
+/vendor
+
+# dev
 .phpunit.result.cache
 
-# Frontend
-/public/assets
-/public/dist/
-/.cache
-
-# Kirby
-.lock
-kirby
-vendor
-index.dev.mjs
-
-/public/media/*
-!/public/media/index.html
-
-/storage/accounts/*
-!/storage/accounts/.gitkeep
-
-/storage/cache/*
-!/storage/cache/.gitkeep
-
-/storage/logs/*
-!/storage/logs/.gitkeep
-
-/storage/sessions/*
-!/storage/sessions/.gitkeep
-
-/site/config/.license
-/site/plugins
-!/site/plugins/plugin
+# Kirbys
+/kirby
+/index.dev.mjs
