--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,18 @@
     }
   ],
   "require": {
-    "getkirby/composer-installer": "^1.2"
+    "getkirby/composer-installer": "^1.2",
+    "mzur/kirby-uniform": "^5.3"
   },
   "require-dev": {
-    "getkirby/cms": "^3.7",
-    "mzur/kirby-uniform": "^5.0"
+    "getkirby/cms": "^3.9"
   },
   "config": {
     "allow-plugins": {
       "getkirby/composer-installer": true
     }
+  },
+  "extra": {
+    "kirby-plugin-path": "example/site/plugins"
   }
 }
