--- a/blueprints/sections/form-success.yml
+++ b/blueprints/sections/form-success.yml
@@ -26,7 +26,7 @@ fields:
     type: writer
     label:
       *: arnoson.kirby-forms.message
-    placeholder: Thank you for the registration!
+    placeholder: Thank you for your registration!
     width: 7/12
     when:
       success_type: message
