--- a/blueprints/sections/form-notification-email.yml
+++ b/blueprints/sections/form-notification-email.yml
@@ -17,6 +17,7 @@ fields:
     label:
       *: arnoson.kirby-forms.email-to
     placeholder: info@your-site.com
+    required: true
     width: 5/12
     when:
       notificationEmail_enabled: true
@@ -25,8 +26,8 @@ fields:
     type: text
     label:
       *: arnoson.kirby-forms.email-subject
-    placeholder: 'Thank you for your registration!'
-    default: 'Thank you for your registration!'
+    placeholder: Thank you for your registration!
+    required: true
     width: 5/12
     when:
       notificationEmail_enabled: true
@@ -50,6 +51,7 @@ fields:
   notificationEmail_content_text:
     label: Text
     type: writer
+    required: true
     width: 2/3
     when:
       notificationEmail_content_type: text
@@ -57,7 +59,8 @@ fields:
 
   notificationEmail_content_template:
     label: Template
-    type: select
+    type: text
+    required: true
     width: 2/3
     when:
       notificationEmail_content_type: template
