chore: distinguish global and form settings

--- a/blueprints/fields/form-field-basic.yml
+++ b/blueprints/fields/form-field-basic.yml
@@ -10,8 +10,9 @@ fields:
       de: Feld Name
     width: 5/12
   name:
-    type: slug
+    type: form-identifier
     label: Identifier
+    translate: false
     sync: label
     placeholder:
       en: field_name
