feat: add field errors

--- a/blueprints/blocks/form-field-date.yml
+++ b/blueprints/blocks/form-field-date.yml
@@ -1,6 +1,5 @@
 name:
-  en: Date
-  de: Datum
+  *: arnoson.kirby-forms.date  
 icon: 📆
 fields:
   extends: fields/form-field-basic
@@ -15,3 +14,7 @@ fields:
   placeholder:
     extends: fields/form-field-placeholder
     width: 1/2
+  error:
+    extends: fields/form-error-message
+    placeholder:
+      *: arnoson.kirby-forms.invalid-date-error
