--- a/blueprints/blocks/form-field-number.yml
+++ b/blueprints/blocks/form-field-number.yml
@@ -1,12 +1,18 @@
 name:
-  en: Number
-  de: Zahl
+  *: arnoson.kirby-forms.number
 icon: 🔟
 fields:
   extends: fields/form-field-basic
   validators:
     type: hidden
     default: '["num"]'
+  default:
+    extends: fields/form-field-default
+    type: number
+    width: 3/12
+  placeholder:
+    extends: fields/form-field-placeholder
+    width: 3/12
   min:
     extends: fields/form-field-min
     width: 2/12
@@ -19,10 +25,7 @@ fields:
     spellcheck: false
     placeholder: '0.01'
     width: 2/12
-  default:
-    extends: fields/form-field-default
-    type: number
-    width: 3/12
-  placeholder:
-    extends: fields/form-field-placeholder
-    width: 3/12
+  error:
+    extends: fields/form-error-message
+    placeholder:
+      *: arnoson.kirby-forms.invalid-number-error    
