--- a/blueprints/blocks/form-field-select.yml
+++ b/blueprints/blocks/form-field-select.yml
@@ -1,6 +1,5 @@
 name:
-  en: Select
-  de: Auswahl
+  *: arnoson.kirby-forms.select
 icon: ✔️
 fields:
   extends: fields/form-field-basic
@@ -27,3 +26,7 @@ fields:
       text:
         type: text
         width: 1/2
+  error:
+    extends: fields/form-error-message
+    placeholder:
+      *: arnoson.kirby-forms.invalid-select-error
