--- a/blueprints/blocks/form-field-checkboxes.yml
+++ b/blueprints/blocks/form-field-checkboxes.yml
@@ -1,4 +1,5 @@
-name: Checkboxes
+name:
+  *: arnoson.kirby-forms.checkboxes  
 icon: ☑️
 fields:
   extends: fields/form-field-basic
@@ -15,3 +16,7 @@ fields:
       text:
         type: text
         width: 1/2
+  error:
+    extends: fields/form-error-message
+    placeholder:
+      *: arnoson.kirby-forms.invalid-checkboxes-error
