--- a/blueprints/blocks/form-field-tel.yml
+++ b/blueprints/blocks/form-field-tel.yml
@@ -1,16 +1,21 @@
 name:
-  en: Telephone
-  de: Telefon
+  *: arnoson.kirby-forms.tel
 icon: ☎️
 fields:
   extends: fields/form-field-basic
   default:
     extends: fields/form-field-default
-    type: text
+    placeholder: 0123456789
+    type: tel
     width: 1/3
   placeholder:
     extends: fields/form-field-placeholder
     width: 1/3
   pattern:
     extends: fields/form-field-pattern
+    placeholder: "[+0-9]+"
     width: 1/3
+  error:
+    extends: fields/form-error-message
+    placeholder:
+      *: arnoson.kirby-forms.invalid-tel-error
