--- a/blueprints/blocks/form-field-text.yml
+++ b/blueprints/blocks/form-field-text.yml
@@ -1,20 +1,30 @@
-name: Text
+name:
+  *: arnoson.kirby-forms.text
 icon: ✏️
 fields:
   extends: fields/form-field-basic
+  default:
+    extends: fields/form-field-default
+    placeholder: Text
+    type: text
+    width: 1/2
+  placeholder:
+    extends: fields/form-field-placeholder
+    placeholder: Text
+    width: 1/2
   min_length:
     extends: fields/form-field-min-length
+    placeholder: 3
     width: 1/6
   max_length:
     extends: fields/form-field-max-length
+    placeholder: 25
     width: 1/6
-  default:
-    extends: fields/form-field-default
-    type: text
-    width: 4/6
-  placeholder:
-    extends: fields/form-field-placeholder
-    width: 1/2
   pattern:
     extends: fields/form-field-pattern
-    width: 1/2
+    placeholder: '[a-z]+'
+    width: 4/6
+  error:
+    extends: fields/form-error-message
+    placeholder:
+      *: arnoson.kirby-forms.invalid-text-error
