--- a/blueprints/blocks/form-field-textarea.yml
+++ b/blueprints/blocks/form-field-textarea.yml
@@ -1,6 +1,5 @@
 name:
-  en: Textarea
-  de: Textblock
+  *: arnoson.kirby-forms.textarea
 icon: 📝
 fields:
   extends: fields/form-field-basic
@@ -14,3 +13,7 @@ fields:
   pattern:
     extends: fields/form-field-pattern
     width: 1/3
+  error:
+    extends: fields/form-error-message
+    placeholder:
+      *: arnoson.kirby-forms.invalid-text-error
