--- a/blueprints/blocks/form-field-url.yml
+++ b/blueprints/blocks/form-field-url.yml
@@ -1,4 +1,5 @@
-name: URL
+name:
+  *: arnoson.kirby-forms.url
 icon: 🔗
 fields:
   extends: fields/form-field-basic
@@ -15,3 +16,7 @@ fields:
   pattern:
     extends: fields/form-field-pattern
     width: 1/3
+  error:
+    extends: fields/form-error-message
+    placeholder:
+      *: arnoson.kirby-forms.invalid-url-error
