chore: update readme and example

--- a/example/.gitignore
+++ b/example/.gitignore
@@ -42,6 +42,7 @@ Icon
 # ---------------
 /site/plugins/*
 !/site/plugins/plugin
+!/site/plugins/custom-form-fields
 
 # Sessions
 # ---------------
