--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dev": "concurrently \"npm:server\" \"npm:watch\" \"npm:mail-hog\" -c yellow,green,blue",
-    "mail-hog": "~/go/bin/MailHog",
+    "mail-hog": "~/go/bin/MailHog -api-bind-addr \"0.0.0.0:8125\" -ui-bind-addr \"0.0.0.0:8126\"",
     "server": "php -q -S localhost:8888  -t ./example/ ./example/router.php",
     "watch": "kirbyup serve src/index.js",
     "build": "kirbyup src/index.js",
