Email notification and Info for Editors
fix: Email notification Email-to change type to email
refactor: Info for none coding Editors, who needs to know the uniform naming conventions.

--- a/blueprints/sections/form-fields.yml
+++ b/blueprints/sections/form-fields.yml
@@ -1,3 +1,6 @@
 type: fields
 fields:
+  confirmationEmail_form_info: 
+    extends: fields/form-email-info
+    theme: negative
   form_fields: fields/form-fields
