Email notification and Info for Editors
fix: Email notification Email-to change type to email
refactor: Info for none coding Editors, who needs to know the uniform naming conventions.

--- a/blueprints/sections/form-confirmation-email.yml
+++ b/blueprints/sections/form-confirmation-email.yml
@@ -32,6 +32,10 @@ fields:
     when:
       confirmationEmail_enabled: true
 
+  confirmationEmail_info: 
+    extends: fields/form-email-info
+    theme: negative
+
   confirmationEmail_subject:
     type: text
     label:
