--- a/blueprints/fields/form-fields.yml
+++ b/blueprints/fields/form-fields.yml
@@ -1,16 +1,11 @@
 label:
-  en: Fields
-  de: Felder
+  *: arnoson.kirby-forms.fields
 type: layout
 layouts:
   - '1/1'
   - '1/2, 1/2'
-  - '1/3, 1/3, 1/3'
-  - '1/4, 1/4, 1/4, 1/4'
   - '1/3, 2/3'
   - '2/3, 1/3'
-  - '1/4, 3/4'
-  - '3/4, 1/4'
 fieldsets:
   basic:
     type: group
